final take
final take